--- a/sr_hand_config/4202/calibrations/calibration.yaml
+++ b/sr_hand_config/4202/calibrations/calibration.yaml
@@ -13,54 +13,59 @@
 # with this program. If not, see <http://www.gnu.org/licenses/>.
 
 sr_calibrations: [
-["FFJ1", [[3379.0, 0.0], [2771.0, 22.5], [2085.0, 45.0], [1362.0, 67.5], [736.0, 90.0]]], 
-["FFJ2", [[2870.0, 0.0], [2612.0, 22.5], [2234.0, 45.0], [1813.0, 67.5], [1472.0, 90.0]]], 
-["FFJ3", [[1828.0, 0.0], [2172.0, 22.5], [2464.0, 45.0], [2721.0, 67.5], [2844.0, 90.0]]], 
-["FFJ4", [[1545.0, -20.0], [1220.0, -10.0], [882.0, 0.0], [646.0, 10.0], [424.0, 20.0]]], 
-["MFJ1", [[3203.0, 0.0], [2502.0, 22.5], [1712.0, 45.0], [1040.0, 67.5], [438.0, 90.0]]], 
-["MFJ2", [[2981.0, 0.0], [2740.0, 22.5], [2398.0, 45.0], [2038.0, 67.5], [1698.0, 90.0]]], 
-["MFJ3", [[1799.0, 0.0], [2150.0, 22.5], [2502.0, 45.0], [2750.0, 67.5], [2891.0, 90.0]]], 
-["MFJ4", [[1885.0, -20.0], [1596.0, -10.0], [1319.4, 0.0], [1055.0, 10.0], [871.0, 20.0]]], 
-["RFJ1", [[3169.0, 0.0], [2533.0, 22.5], [1817.0, 45.0], [1218.0, 67.5], [687.0, 90.0]]], 
-["RFJ2", [[2675.0, 0.0], [2366.0, 22.5], [1959.0, 45.0], [1566.0, 67.5], [1247.0, 90.0]]], 
-["RFJ3", [[1871.0, 0.0], [2222.0, 22.5], [2578.0, 45.0], [2881.0, 67.5], [3047.0, 90.0]]], 
-["RFJ4", [[615.0, -20.0], [881.0, -10.0], [1155.0, 0.0], [1560.0, 10.0], [1901.0, 20.0]]], 
-["LFJ1", [[3037.0, 0.0], [2434.0, 22.5], [1726.0, 45.0], [1145.0, 67.5], [670.0, 90.0]]], 
-["LFJ2", [[2860.0, 0.0], [2550.0, 22.5], [2185.0, 45.0], [1775.0, 67.5], [1415.0, 90.0]]], 
-["LFJ3", [[1660.0, 0.0], [2036.0, 22.5], [2445.0, 45.0], [2815.0, 67.5], [3039.0, 90.0]]], 
-["LFJ4", [[747.0, -20.0], [1001.0, -10.0], [1272.0, 0.0], [1545.0, 10.0], [1780.0, 20.0]]], 
-["LFJ5", [[1888.0, 0.0], [2370.0, 22.5], [2809.0, 45.0], [3288.0, 67.5]]], 
-["THJ3", [[1452.0, -15.0], [2268.0, 0.0], [2744.0, 15.0]]], 
-["THJ4", [[1391.0, 0.0], [1679.0, 22.5], [2032.0, 45.0], [2379.0, 67.5]]], 
-["THJ5", [[566.0, -60.0], [775.0, -45.0], [978.0, -30.0], [1227.0, -15.0], [1531.0, 0.0], [1903.0, 15.0], [2235.0, 30.0], [2610.0, 45.0], [2967.0, 60.0]]], 
-["WRJ1", [[2506.0, -45.0], [2399.0, -22.5], [2212.0, 0.0], [2059.0, 15.0], [1900.0, 30.0]]], 
-["WRJ2", [[2555.0, -30.0], [1190.0, 0.0], [685.0, 10.0]]], 
+["FFJ1", [[3267.0, 0.0], [2749.0, 22.5], [2077.0, 45.0], [1405.0, 67.5], [795.0, 90.0]]], 
+["FFJ2", [[2893.0, 0.0], [2631.0, 22.5], [2253.0, 45.0], [1815.0, 67.5], [1445.0, 90.0]]], 
+["FFJ3", [[3084.0, -15.0], [2484.0, 0.0], [1961.0, 22.5], [1398.0, 45.0], [978.0, 67.5], [769.0, 90.0]]], 
+["FFJ4", [[2587.0, -20.0], [2260.0, -10.0], [1908.0, 0.0], [1590.0, 10.0], [1314.0, 20.0]]], 
+["MFJ1", [[3259.41, 0.0], [2652.0, 22.5], [1976.0, 45.0], [1328.0, 67.5], [698.0, 90.0]]], 
+["MFJ2", [[2927.78, 0.0], [2699.0, 22.5], [2346.0, 45.0], [1956.0, 67.5], [1575.0, 90.0]]], 
+["MFJ3", [[3174.0, -15.0], [2574.0, 0.0], [2026.0, 22.5], [1461.0, 45.0], [960.0, 67.5], [625.0, 90.0]]], 
+["MFJ4", [[2127.0, -20.0], [1819.0, -10.0], [1539.7, 0.0], [1222.0, 10.0], [971.0, 20.0]]], 
+["RFJ1", [[3309.0, 0.0], [2722.0, 22.5], [2069.0, 45.0], [1439.0, 67.5], [843.0, 90.0]]], 
+["RFJ2", [[3014.0, 0.0], [2787.0, 22.5], [2405.0, 45.0], [2002.0, 67.5], [1577.0, 90.0]]], 
+["RFJ3", [[3058.0, -15.0], [2458.0, 0.0], [2009.0, 22.5], [1533.0, 45.0], [1106.0, 67.5], [905.0, 90.0]]], 
+["RFJ4", [[956.0, -20.0], [1236.0, -10.0], [1531.0, 0.0], [1812.0, 10.0], [2099.0, 20.0]]], 
+["LFJ1", [[2968.0, 0.0], [2282.0, 22.5], [1509.0, 45.0], [838.0, 67.5], [367.0, 90.0]]], 
+["LFJ2", [[2972.0, 0.0], [2605.0, 22.5], [2200.0, 45.0], [1762.0, 67.5], [1390.0, 90.0]]], 
+["LFJ3", [[3419.0, -15.0], [2819.15, 0.0], [2218.0, 22.5], [1633.0, 45.0], [1206.0, 67.5], [864.0, 90.0]]], 
+["LFJ4", [[1016.0, -20.0], [1280.0, -10.0], [1577.0, 0.0], [1860.0, 10.0], [2093.0, 20.0]]], 
+["LFJ5", [[653.35, 0.0], [1641.0, 22.5], [2140.0, 45.0], [2632.0, 67.5]]], 
+["THJ3", [[2590.0, -12.0], [1834.0, 0.0], [1078.0, 12.0]]], 
+["THJ4", [[1432.0, 0.0], [1661.0, 22.5], [1953.0, 45.0], [2277.0, 67.5]]], 
+["THJ5", [[512.0, -60.0], [778.0, -45.0], [1004.0, -30.0], [1239.0, -15.0], [1480.0, 0.0], [1902.0, 15.0], [2329.0, 30.0], [2801.0, 45.0], [3088.0, 60.0]]], 
+["WRJ1", [[2374.0, -45.0], [2251.0, -22.5], [2101.0, 0.0], [1975.0, 15.0], [1870.0, 30.0]]], 
+["WRJ2", [[2871.0, -30.0], [1299.0, 0.0], [716.0, 10.0]]], 
 ]
 
 sr_calibrations_coupled: [
-[["THJ1", "THJ2"], [[[2780.0, 2330.0], 0.0, 40.0], 
-                    [[2769.0, 2180.0], 0.0, 20.0], 
-                    [[2755.0, 2035.0], 0.0, 0.0], 
-                    [[2739.0, 1887.0], 0.0, -20.0], 
-                    [[2726.0, 1760.0], 0.0, -40.0], 
-                    [[2369.0, 2307.0], 22.5, 40.0], 
-                    [[2356.0, 2172.0], 22.5, 20.0], 
-                    [[2341.0, 2018.0], 22.5, 0.0], 
-                    [[2323.0, 1847.0], 22.5, -20.0], 
-                    [[2313.0, 1722.0], 22.5, -40.0], 
-                    [[1908.0, 2279.0], 45.0, 40.0], 
-                    [[1899.0, 2134.0], 45.0, 20.0], 
-                    [[1874.0, 1986.0], 45.0, 0.0], 
-                    [[1858.0, 1841.0], 45.0, -20.0], 
-                    [[1852.0, 1699.0], 45.0, -40.0], 
-                    [[1444.0, 2255.0], 67.5, 40.0], 
-                    [[1434.0, 2118.0], 67.5, 20.0], 
-                    [[1418.0, 1949.0], 67.5, 0.0], 
-                    [[1394.0, 1797.0], 67.5, -20.0], 
-                    [[1384.0, 1676.0], 67.5, -40.0], 
-                    [[1047.0, 2233.0], 90.0, 40.0], 
-                    [[1039.0, 2085.0], 90.0, 20.0], 
-                    [[1022.0, 1946.0], 90.0, 0.0], 
-                    [[998.0, 1793.0], 90.0, -20.0], 
-                    [[990.0, 1664.0], 90.0, -40.0]]]
+[["THJ1", "THJ2"], [[[3427.0, 2392.0], -15.0, 40.0], 
+                    [[3327.0, 2233.0], -15.0, 20.0], 
+                    [[3227.0, 2059.0], -15.0, 0.0], 
+                    [[3127.0, 1867.0], -15.0, -20.0], 
+                    [[3027.0, 1713.0], -15.0, -40.0],
+                    [[2627.0, 2362.0], 0.0, 40.0], 
+                    [[2616.0, 2203.0], 0.0, 20.0], 
+                    [[2593.0, 2029.0], 0.0, 0.0], 
+                    [[2584.0, 1837.0], 0.0, -20.0], 
+                    [[2568.0, 1683.0], 0.0, -40.0], 
+                    [[2172.0, 2345.0], 22.5, 40.0], 
+                    [[2160.0, 2184.0], 22.5, 20.0], 
+                    [[2144.0, 2000.0], 22.5, 0.0], 
+                    [[2120.0, 1810.0], 22.5, -20.0], 
+                    [[2104.0, 1651.0], 22.5, -40.0], 
+                    [[1709.0, 2323.0], 45.0, 40.0], 
+                    [[1697.0, 2165.0], 45.0, 20.0], 
+                    [[1680.0, 1977.0], 45.0, 0.0], 
+                    [[1660.0, 1787.0], 45.0, -20.0], 
+                    [[1643.0, 1631.0], 45.0, -40.0], 
+                    [[1298.0, 2295.0], 67.5, 40.0], 
+                    [[1295.0, 2139.0], 67.5, 20.0], 
+                    [[1278.0, 1951.0], 67.5, 0.0], 
+                    [[1260.0, 1770.0], 67.5, -20.0], 
+                    [[1248.0, 1617.0], 67.5, -40.0], 
+                    [[1023.0, 2280.0], 90.0, 40.0], 
+                    [[1009.0, 2119.0], 90.0, 20.0], 
+                    [[993.0, 1937.0], 90.0, 0.0], 
+                    [[973.0, 1758.0], 90.0, -20.0], 
+                    [[959.0, 1599.0], 90.0, -40.0]]]
 ]
