--- a/sr_hand_config/4202/calibrations/calibration.yaml
+++ b/sr_hand_config/4202/calibrations/calibration.yaml
@@ -13,54 +13,59 @@
 # with this program. If not, see <http://www.gnu.org/licenses/>.
 
 sr_calibrations: [
-["FFJ1", [[3379.0, 0.0], [2771.0, 22.5], [2085.0, 45.0], [1362.0, 67.5], [736.0, 90.0]]], 
-["FFJ2", [[2870.0, 0.0], [2612.0, 22.5], [2234.0, 45.0], [1813.0, 67.5], [1472.0, 90.0]]], 
-["FFJ3", [[1828.0, 0.0], [2172.0, 22.5], [2464.0, 45.0], [2721.0, 67.5], [2844.0, 90.0]]], 
-["FFJ4", [[1545.0, -20.0], [1220.0, -10.0], [882.0, 0.0], [646.0, 10.0], [424.0, 20.0]]], 
-["MFJ1", [[3203.0, 0.0], [2502.0, 22.5], [1712.0, 45.0], [1040.0, 67.5], [438.0, 90.0]]], 
-["MFJ2", [[2981.0, 0.0], [2740.0, 22.5], [2398.0, 45.0], [2038.0, 67.5], [1698.0, 90.0]]], 
-["MFJ3", [[1799.0, 0.0], [2150.0, 22.5], [2502.0, 45.0], [2750.0, 67.5], [2891.0, 90.0]]], 
-["MFJ4", [[1885.0, -20.0], [1596.0, -10.0], [1319.4, 0.0], [1055.0, 10.0], [871.0, 20.0]]], 
-["RFJ1", [[3169.0, 0.0], [2533.0, 22.5], [1817.0, 45.0], [1218.0, 67.5], [687.0, 90.0]]], 
-["RFJ2", [[2675.0, 0.0], [2366.0, 22.5], [1959.0, 45.0], [1566.0, 67.5], [1247.0, 90.0]]], 
-["RFJ3", [[1871.0, 0.0], [2222.0, 22.5], [2578.0, 45.0], [2881.0, 67.5], [3047.0, 90.0]]], 
-["RFJ4", [[615.0, -20.0], [881.0, -10.0], [1155.0, 0.0], [1560.0, 10.0], [1901.0, 20.0]]], 
-["LFJ1", [[3037.0, 0.0], [2434.0, 22.5], [1726.0, 45.0], [1145.0, 67.5], [670.0, 90.0]]], 
-["LFJ2", [[2860.0, 0.0], [2550.0, 22.5], [2185.0, 45.0], [1775.0, 67.5], [1415.0, 90.0]]], 
-["LFJ3", [[1660.0, 0.0], [2036.0, 22.5], [2445.0, 45.0], [2815.0, 67.5], [3039.0, 90.0]]], 
-["LFJ4", [[747.0, -20.0], [1001.0, -10.0], [1272.0, 0.0], [1545.0, 10.0], [1780.0, 20.0]]], 
-["LFJ5", [[1888.0, 0.0], [2370.0, 22.5], [2809.0, 45.0], [3288.0, 67.5]]], 
-["THJ3", [[1452.0, -15.0], [2268.0, 0.0], [2744.0, 15.0]]], 
+["FFJ1", [[3380.0, 0.0], [2830.0, 22.5], [2141.0, 45.0], [1422.0, 67.5], [816.0, 90.0]]], 
+["FFJ2", [[2876.0, 0.0], [2583.0, 22.5], [2222.0, 45.0], [1831.0, 67.5], [1453.0, 90.0]]], 
+["FFJ3", [[1556.0, -15.0], [1833.0, 0.0], [2205.0, 22.5], [2480.0, 45.0], [2759.0, 67.5], [2879.0, 90.0]]], 
+["FFJ4", [[1500.0, -20.0], [1192.0, -10.0], [888.0, 0.0], [632.0, 10.0], [420.0, 20.0]]], 
+["MFJ1", [[3223.0, 0.0], [2532.0, 22.5], [1765.0, 45.0], [1088.0, 67.5], [438.0, 90.0]]], 
+["MFJ2", [[2995.0, 0.0], [2708.0, 22.5], [2365.0, 45.0], [2000.0, 67.5], [1672.0, 90.0]]], 
+["MFJ3", [[1600.0, -15.0], [1825.0, 0.0], [2175.0, 22.5], [2515.0, 45.0], [2759.0, 67.5], [2911.0, 90.0]]], 
+["MFJ4", [[1900.0, -20.0], [1660.0, -10.0], [1367.0, 0.0], [1106.0, 10.0], [904.0, 20.0]]], 
+["RFJ1", [[3169.0, 0.0], [2585.0, 22.5], [1873.0, 45.0], [1268.0, 67.5], [648.0, 90.0]]], 
+["RFJ2", [[2667.0, 0.0], [2345.0, 22.5], [1942.0, 45.0], [1566.0, 67.5], [1260.0, 90.0]]], 
+["RFJ3", [[1567.0, -15.0], [1888.0, 0.0], [2232.0, 22.5], [2599.0, 45.0], [2893.0, 67.5], [3050.0, 90.0]]], 
+["RFJ4", [[608.0, -20.0], [880.0, -10.0], [1180.0, 0.0], [1545.0, 10.0], [1896.0, 20.0]]], 
+["LFJ1", [[3085.0, 0.0], [2460.0, 22.5], [1759.0, 45.0], [1137.0, 67.5], [634.0, 90.0]]], 
+["LFJ2", [[2808.0, 0.0], [2545.0, 22.5], [2193.0, 45.0], [1810.0, 67.5], [1434.0, 90.0]]], 
+["LFJ3", [[1362.0, -15.0], [1659.0, 0.0], [2034.0, 22.5], [2448.0, 45.0], [2836.0, 67.5], [3088.0, 90.0]]], 
+["LFJ4", [[756.0, -20.0], [999.0, -10.0], [1250.0, 0.0], [1535.0, 10.0], [1767.0, 20.0]]], 
+["LFJ5", [[1920.0, 0.0], [2347.0, 22.5], [2776.0, 45.0], [3205.0, 67.5]]], 
+["THJ3", [[1626.0, -12.0], [2290.0, 0.0], [2704.0, 12.0]]], 
 ["THJ4", [[1391.0, 0.0], [1679.0, 22.5], [2032.0, 45.0], [2379.0, 67.5]]], 
-["THJ5", [[566.0, -60.0], [775.0, -45.0], [978.0, -30.0], [1227.0, -15.0], [1531.0, 0.0], [1903.0, 15.0], [2235.0, 30.0], [2610.0, 45.0], [2967.0, 60.0]]], 
-["WRJ1", [[2506.0, -45.0], [2399.0, -22.5], [2212.0, 0.0], [2059.0, 15.0], [1900.0, 30.0]]], 
-["WRJ2", [[2555.0, -30.0], [1190.0, 0.0], [685.0, 10.0]]], 
+["THJ5", [[543.0, -60.0], [752.0, -45.0], [971.0, -30.0], [1248.0, -15.0], [1436.0, 0.0], [1857.0, 15.0], [2172.0, 30.0], [2573.0, 45.0], [2919.0, 60.0]]], 
+["WRJ1", [[2524.0, -45.0], [2394.0, -22.5], [2205.0, 0.0], [2042.0, 15.0], [1885.0, 30.0]]], 
+["WRJ2", [[2524.0, -30.0], [1206.0, 0.0], [713.0, 10.0]]], 
 ]
 
 sr_calibrations_coupled: [
-[["THJ1", "THJ2"], [[[2780.0, 2330.0], 0.0, 40.0], 
-                    [[2769.0, 2180.0], 0.0, 20.0], 
-                    [[2755.0, 2035.0], 0.0, 0.0], 
-                    [[2739.0, 1887.0], 0.0, -20.0], 
-                    [[2726.0, 1760.0], 0.0, -40.0], 
-                    [[2369.0, 2307.0], 22.5, 40.0], 
-                    [[2356.0, 2172.0], 22.5, 20.0], 
-                    [[2341.0, 2018.0], 22.5, 0.0], 
-                    [[2323.0, 1847.0], 22.5, -20.0], 
-                    [[2313.0, 1722.0], 22.5, -40.0], 
-                    [[1908.0, 2279.0], 45.0, 40.0], 
-                    [[1899.0, 2134.0], 45.0, 20.0], 
-                    [[1874.0, 1986.0], 45.0, 0.0], 
-                    [[1858.0, 1841.0], 45.0, -20.0], 
-                    [[1852.0, 1699.0], 45.0, -40.0], 
-                    [[1444.0, 2255.0], 67.5, 40.0], 
-                    [[1434.0, 2118.0], 67.5, 20.0], 
-                    [[1418.0, 1949.0], 67.5, 0.0], 
-                    [[1394.0, 1797.0], 67.5, -20.0], 
-                    [[1384.0, 1676.0], 67.5, -40.0], 
-                    [[1047.0, 2233.0], 90.0, 40.0], 
-                    [[1039.0, 2085.0], 90.0, 20.0], 
-                    [[1022.0, 1946.0], 90.0, 0.0], 
-                    [[998.0, 1793.0], 90.0, -20.0], 
-                    [[990.0, 1664.0], 90.0, -40.0]]]
+[["THJ1", "THJ2"], [[[2943.0, 2344.0], -15.0, 40.0], 
+                    [[2941.0, 2194.0], -15.0, 20.0], 
+                    [[2925.0, 2034.0], -15.0, 0.0], 
+                    [[2905.0, 1881.0], -15.0, -20.0], 
+                    [[2886.0, 1754.0], -15.0, -40.0],
+                    [[2716.0, 2334.0], 0.0, 40.0], 
+                    [[2710.0, 2183.0], 0.0, 20.0], 
+                    [[2693.0, 2023.0], 0.0, 0.0], 
+                    [[2672.0, 1873.0], 0.0, -20.0], 
+                    [[2653.0, 1745.0], 0.0, -40.0], 
+                    [[2284.0, 2308.0], 22.5, 40.0], 
+                    [[2275.0, 2161.0], 22.5, 20.0], 
+                    [[2258.0, 2004.0], 22.5, 0.0], 
+                    [[2243.0, 1849.0], 22.5, -20.0], 
+                    [[2229.0, 1723.0], 22.5, -40.0], 
+                    [[1818.0, 2283.0], 45.0, 40.0], 
+                    [[1804.0, 2144.0], 45.0, 20.0], 
+                    [[1789.0, 1985.0], 45.0, 0.0], 
+                    [[1775.0, 1823.0], 45.0, -20.0], 
+                    [[1769.0, 1686.0], 45.0, -40.0], 
+                    [[1365.0, 2260.0], 67.5, 40.0], 
+                    [[1347.0, 2119.0], 67.5, 20.0], 
+                    [[1328.0, 1952.0], 67.5, 0.0], 
+                    [[1320.0, 1790.0], 67.5, -20.0], 
+                    [[1313.0, 1665.0], 67.5, -40.0], 
+                    [[1023.0, 2246.0], 90.0, 40.0], 
+                    [[991.0, 2093.0], 90.0, 20.0], 
+                    [[972.0, 1936.0], 90.0, 0.0], 
+                    [[969.0, 1793.0], 90.0, -20.0], 
+                    [[961.0, 1649.0], 90.0, -40.0]]]
 ]
