--- a/sr_hand_config/5754/calibrations/calibration.yaml
+++ b/sr_hand_config/5754/calibrations/calibration.yaml
@@ -1,4 +1,4 @@
-# Copyright 2023 Shadow Robot Company Ltd.
+# Copyright 2024 Shadow Robot Company Ltd.
 #
 # This program is free software: you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by the Free
@@ -14,59 +14,59 @@
 
 
 sr_calibrations: [
-["FFJ1", [[3287.0, 0.0], [2675.0, 22.5], [1926.0, 45.0], [1251.0, 67.5], [628.0, 90.0]]], 
-["FFJ2", [[2811.0, 0.0], [2541.0, 22.5], [2190.0, 45.0], [1733.0, 67.5], [1332.0, 90.0]]], 
-["FFJ3", [[2477.0, 0.0], [2062.0, 22.5], [1607.0, 45.0], [1207.0, 67.5], [925.0, 90.0]]], 
-["FFJ4", [[1234.0, -20.0], [1535.0, -10.0], [1879.0, 0.0], [2186.0, 10.0], [2490.0, 20.0]]], 
-["MFJ1", [[3099.0, 0.0], [2417.0, 22.5], [1733.0, 45.0], [1126.0, 67.5], [658.0, 90.0]]], 
-["MFJ2", [[2759.0, 0.0], [2424.0, 22.5], [2047.0, 45.0], [1663.0, 67.5], [1327.0, 90.0]]], 
-["MFJ3", [[2546.0, 0.0], [2104.0, 22.5], [1613.0, 45.0], [1183.0, 67.5], [866.0, 90.0]]], 
+["FFJ1", [[3291.0, 0.0], [2675.0, 22.5], [1926.0, 45.0], [1251.0, 67.5], [628.0, 90.0]]], 
+["FFJ2", [[2809.0, 0.0], [2541.0, 22.5], [2190.0, 45.0], [1733.0, 67.5], [1332.0, 90.0]]], 
+["FFJ3", [[2833.0, -15.0],  [2507.0, 0.0], [2081.0, 22.5], [1607.0, 45.0], [1218.0, 67.5], [925.0, 90.0]]], 
+["FFJ4", [[1234.0, -20.0], [1535.0, -10.0], [1879.0, 0.0], [2186.0, 10.0], [2490.0, 20.0]]],   
+["MFJ1", [[3115.0, 0.0], [2417.0, 22.5], [1733.0, 45.0], [1126.0, 67.5], [658.0, 90.0]]], 
+["MFJ2", [[2755.0, 0.0], [2424.0, 22.5], [2047.0, 45.0], [1663.0, 67.5], [1327.0, 90.0]]], 
+["MFJ3", [[2913.0, -15.0], [2104.0, 22.5], [1613.0, 45.0], [1183.0, 67.5], [866.0, 90.0]]], 
 ["MFJ4", [[1269.0, -20.0], [1550.0, -10.0], [1883.0, 0.0], [2182.0, 10.0], [2496.0, 20.0]]], 
-["RFJ1", [[3171.0, 0.0], [2599.0, 22.5], [1935.0, 45.0], [1259.0, 67.5], [669.0, 90.0]]], 
-["RFJ2", [[2967.0, 0.0], [2711.0, 22.5], [2315.0, 45.0], [1903.0, 67.5], [1537.0, 90.0]]], 
-["RFJ3", [[2408.0, 0.0], [1891.0, 22.5], [1346.0, 45.0], [875.0, 67.5], [552.0, 90.0]]], 
+["RFJ1", [[3190.0, 0.0], [2599.0, 22.5], [1935.0, 45.0], [1259.0, 67.5], [669.0, 90.0]]], 
+["RFJ2", [[2988.0, 0.0], [2711.0, 22.5], [2315.0, 45.0], [1903.0, 67.5], [1537.0, 90.0]]], 
+["RFJ3", [[2870.0, -15.0], [2408.0, 0.0], [1891.0, 22.5], [1346.0, 45.0], [875.0, 67.5], [552.0, 90.0]]], 
 ["RFJ4", [[2495.0, -20.0], [2181.0, -10.0], [1840.0, 0.0], [1555.0, 10.0], [1321.0, 20.0]]], 
-["LFJ1", [[3057.0, 0.0], [2379.0, 22.5], [1667.0, 45.0], [1057.0, 67.5], [651.0, 90.0]]], 
-["LFJ2", [[2989.0, 0.0], [2741.0, 22.5], [2374.0, 45.0], [1986.0, 67.5], [1552.0, 90.0]]], 
-["LFJ3", [[2485.0, 0.0], [1984.0, 22.5], [1522.0, 45.0], [1072.0, 67.5], [768.0, 90.0]]], 
+["LFJ1", [[3072.0, 0.0], [2379.0, 22.5], [1667.0, 45.0], [1057.0, 67.5], [651.0, 90.0]]], 
+["LFJ2", [[3003.0, 0.0], [2741.0, 22.5], [2374.0, 45.0], [1986.0, 67.5], [1552.0, 90.0]]], 
+["LFJ3", [[2885.0, -15.0], [2582.0, 0.0], [1984.0, 22.5], [1522.0, 45.0], [1072.0, 67.5], [768.0, 90.0]]], 
 ["LFJ4", [[2263.0, -20.0], [2004.0, -10.0], [1708.0, 0.0], [1424.0, 10.0], [1261.0, 20.0]]], 
-["LFJ5", [[646.0, 0.0], [1229.0, 22.5], [1685.0, 45.0], [2143.0, 67.5]]], 
+["LFJ5", [[645.0, 0.0], [1229.0, 22.5], [1685.0, 45.0], [2143.0, 67.5]]], 
 ["THJ3", [[2601.0, -15.0], [1596.0, 0.0], [946.0, 15.0]]], 
-["THJ4", [[1513.0, 0.0], [1803.0, 22.5], [2091.0, 45.0], [2379.0, 67.5]]], 
-["THJ5", [[691.0, -60.0], [933.0, -45.0], [1171.0, -30.0], [1399.0, -15.0], [1837.0, 0.0], [2215.0, 15.0], [2651.0, 30.0], [2971.0, 45.0], [3211.0, 60.0]]], 
+["THJ4", [[1512.0, 0.0], [1796.0, 22.5], [2089.0, 45.0], [2361.0, 67.5]]], 
+["THJ5", [[617.0, -60.0], [918.0, -45.0], [1141.0, -30.0], [1391.0, -15.0], [1893.0, 0.0], [2285.0, 15.0], [2702.0, 30.0], [3018.0, 45.0], [3233.0, 60.0]]], 
 ["WRJ1", [[2230.0, -45.0], [2121.0, -22.5], [2015.0, 0.0], [1913.0, 15.0], [1821.0, 30.0]]], 
 ["WRJ2", [[2431.0, -30.0], [1128.0, 0.0], [451.0, 10.0]]], 
 ]
 
 sr_calibrations_coupled: [
-[["THJ1", "THJ2"], [[[2993.0, 2307.0], -15.0, 40.0], 
-                    [[2979.0, 2159.0], -15.0, 20.0], 
-                    [[2959.0, 1987.0], -15.0, 0.0], 
-                    [[2941.0, 1817.0], -15.0, -20.0], 
-                    [[2927.0, 1697.0], -15.0, -40.0], 
-                    [[2714.0, 2283.0], 0.0, 40.0], 
-                    [[2699.0, 2128.0], 0.0, 20.0], 
-                    [[2683.0, 1944.0], 0.0, 0.0], 
-                    [[2666.0, 1795.0], 0.0, -20.0], 
-                    [[2651.0, 1667.0], 0.0, -40.0], 
-                    [[2235.0, 2258.0], 22.5, 40.0], 
-                    [[2219.0, 2092.0], 22.5, 20.0], 
-                    [[2202.0, 1917.0], 22.5, 0.0], 
-                    [[2188.0, 1767.0], 22.5, -20.0], 
-                    [[2176.0, 1638.0], 22.5, -40.0], 
-                    [[1751.0, 2235.0], 45.0, 40.0], 
-                    [[1730.0, 2070.0], 45.0, 20.0], 
-                    [[1712.0, 1895.0], 45.0, 0.0], 
-                    [[1702.0, 1736.0], 45.0, -20.0], 
-                    [[1692.0, 1613.0], 45.0, -40.0], 
-                    [[1336.0, 2211.0], 67.5, 40.0], 
-                    [[1315.0, 2054.0], 67.5, 20.0], 
-                    [[1295.0, 1871.0], 67.5, 0.0], 
-                    [[1287.0, 1716.0], 67.5, -20.0], 
-                    [[1280.0, 1591.0], 67.5, -40.0], 
-                    [[1092.0, 2197.0], 90.0, 40.0], 
-                    [[1052.0, 2034.0], 90.0, 20.0], 
-                    [[1031.0, 1855.0], 90.0, 0.0], 
-                    [[1027.0, 1695.0], 90.0, -20.0], 
-                    [[1021.0, 1580.0], 90.0, -40.0]]]
+[["THJ1", "THJ2"], [[[3047.0, 2323.0], -15.0, 40.0], 
+                    [[3030.0, 2158.0], -15.0, 20.0], 
+                    [[3018.0, 1962.0], -15.0, 0.0], 
+                    [[2996.0, 17.0], -15.0, -20.0], 
+                    [[2981.0, 1664.0], -15.0, -40.0], 
+                    [[2784.0, 2295.0], 0.0, 40.0], 
+                    [[2773.0, 2127.0], 0.0, 20.0], 
+                    [[2757.0, 1935.0], 0.0, 0.0], 
+                    [[2736.0, 1777.0], 0.0, -20.0], 
+                    [[2719.0, 1646.0], 0.0, -40.0], 
+                    [[2308.0, 2269.0], 22.5, 40.0], 
+                    [[2289.0, 2100.0], 22.5, 20.0], 
+                    [[2265.0, 1930.0], 22.5, 0.0], 
+                    [[2249.0, 1761.0], 22.5, -20.0], 
+                    [[2236.0, 1629.0], 22.5, -40.0], 
+                    [[1812.0, 2238.0], 45.0, 40.0], 
+                    [[1792.0, 2074.0], 45.0, 20.0], 
+                    [[1771.0, 1890.0], 45.0, 0.0], 
+                    [[1760.0, 1722.0], 45.0, -20.0], 
+                    [[1751.0, 1599.0], 45.0, -40.0], 
+                    [[1382.0, 2216.0], 67.5, 40.0], 
+                    [[1361.0, 2056.0], 67.5, 20.0], 
+                    [[1333.0, 1878.0], 67.5, 0.0], 
+                    [[1326.0, 1701.0], 67.5, -20.0], 
+                    [[1320.0, 1574.0], 67.5, -40.0], 
+                    [[1121.0, 2200.0], 90.0, 40.0], 
+                    [[1062.0, 2034.0], 90.0, 20.0], 
+                    [[1035.0, 1849.0], 90.0, 0.0], 
+                    [[1032.0, 1687.0], 90.0, -20.0], 
+                    [[1025.0, 1556.0], 90.0, -40.0]]]
 ]
