--- a/sr_hand_config/4938/calibrations/calibration.yaml
+++ b/sr_hand_config/4938/calibrations/calibration.yaml
@@ -1,4 +1,4 @@
-# Copyright 2022 Shadow Robot Company Ltd.
+# Copyright 2024 Shadow Robot Company Ltd.
 #
 # This program is free software: you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by the Free
@@ -13,54 +13,59 @@
 # with this program. If not, see <http://www.gnu.org/licenses/>.
 
 sr_calibrations: [
-["FFJ1", [[2967.0, 0.0], [2099.0, 22.5], [1260.0, 45.0], [474.0, 67.5], [15.0, 90.0]]], 
-["FFJ2", [[2973.0, 0.0], [2677.0, 22.5], [2335.0, 45.0], [1934.0, 67.5], [1550.0, 90.0]]], 
-["FFJ3", [[2423.0, 0.0], [1890.0, 22.5], [1367.0, 45.0], [922.0, 67.5], [654.0, 90.0]]], 
+["FFJ1", [[2965.0, 0.0], [2099.0, 22.5], [1260.0, 45.0], [474.0, 67.5], [15.0, 90.0]]], 
+["FFJ2", [[2955.0, 0.0], [2677.0, 22.5], [2335.0, 45.0], [1934.0, 67.5], [1550.0, 90.0]]], 
+["FFJ3", [[2843.0, -15.0], [2423.0, 0.0], [1890.0, 22.5], [1367.0, 45.0], [922.0, 67.5], [654.0, 90.0]]], 
 ["FFJ4", [[2585.0, -20.0], [2304.0, -10.0], [1997.0, 0.0], [1664.0, 10.0], [1407.0, 20.0]]], 
-["MFJ1", [[3108.0, 0.0], [2293.0, 22.5], [1520.0, 45.0], [776.0, 67.5], [235.0, 90.0]]], 
-["MFJ2", [[2868.0, 0.0], [2585.0, 22.5], [2206.0, 45.0], [1835.0, 67.5], [1476.0, 90.0]]], 
-["MFJ3", [[2518.0, 0.0], [1945.0, 22.5], [1423.0, 45.0], [987.0, 67.5], [665.0, 90.0]]], 
+["MFJ1", [[3113.0, 0.0], [2293.0, 22.5], [1520.0, 45.0], [776.0, 67.5], [235.0, 90.0]]], 
+["MFJ2", [[2874.0, 0.0], [2585.0, 22.5], [2206.0, 45.0], [1835.0, 67.5], [1476.0, 90.0]]], 
+["MFJ3", [[2909.0, -15.0], [2518.0, 0.0], [1945.0, 22.5], [1423.0, 45.0], [987.0, 67.5], [665.0, 90.0]]], 
 ["MFJ4", [[2485.0, -20.0], [2190.0, -10.0], [1857.0, 0.0], [1532.0, 10.0], [1212.0, 20.0]]], 
-["RFJ1", [[3023.0, 0.0], [2145.0, 22.5], [1324.0, 45.0], [638.0, 67.5], [141.0, 90.0]]], 
-["RFJ2", [[3002.0, 0.0], [2713.0, 22.5], [2303.0, 45.0], [1912.0, 67.5], [1545.0, 90.0]]], 
-["RFJ3", [[2722.0, 0.0], [2187.0, 22.5], [1656.0, 45.0], [1169.0, 67.5], [779.0, 90.0]]], 
+["RFJ1", [[3013.0, 0.0], [2145.0, 22.5], [1324.0, 45.0], [638.0, 67.5], [141.0, 90.0]]], 
+["RFJ2", [[3015.0, 0.0], [2713.0, 22.5], [2303.0, 45.0], [1912.0, 67.5], [1545.0, 90.0]]], 
+["RFJ3", [[3125.0, -15.0], [2722.0, 0.0], [2187.0, 22.5], [1656.0, 45.0], [1169.0, 67.5], [779.0, 90.0]]], 
 ["RFJ4", [[612.0, -20.0], [818.0, -10.0], [1084.0, 0.0], [1374.0, 10.0], [1623.0, 20.0]]], 
-["LFJ1", [[3444.0, 0.0], [2831.0, 22.5], [1965.0, 45.0], [1162.0, 67.5], [423.0, 90.0]]], 
-["LFJ2", [[2977.0, 0.0], [2668.0, 22.5], [2279.0, 45.0], [1851.0, 67.5], [1465.0, 90.0]]], 
-["LFJ3", [[3054.0, 0.0], [2596.0, 22.5], [2141.0, 45.0], [1553.0, 67.5], [1061.0, 90.0]]], 
+["LFJ1", [[3457.0, 0.0], [2831.0, 22.5], [1965.0, 45.0], [1162.0, 67.5], [423.0, 90.0]]], 
+["LFJ2", [[2992.0, 0.0], [2668.0, 22.5], [2279.0, 45.0], [1851.0, 67.5], [1465.0, 90.0]]], 
+["LFJ3", [[3321.0, -15.0], [3054.0, 0.0], [2596.0, 22.5], [2141.0, 45.0], [1553.0, 67.5], [1061.0, 90.0]]], 
 ["LFJ4", [[1564.0, -20.0], [1872.0, -10.0], [2197.0, 0.0], [2533.0, 10.0], [2837.0, 20.0]]], 
-["LFJ5", [[1293.0, 0.0], [1830.0, 22.5], [2204.0, 45.0], [2686.0, 67.5]]], 
+["LFJ5", [[1325.0, 0.0], [1830.0, 22.5], [2204.0, 45.0], [2686.0, 67.5]]], 
 ["THJ3", [[2608.0, -15.0], [1782.0, 0.0], [951.0, 15.0]]], 
-["THJ4", [[2617.0, 0.0], [2368.0, 22.5], [2065.0, 45.0], [1782.0, 67.5]]], 
-["THJ5", [[626.0, -60.0], [813.0, -45.0], [1051.0, -30.0], [1275.0, -15.0], [1591.0, 0.0], [2060.0, 15.0], [2520.0, 30.0], [2838.0, 45.0], [3091.0, 60.0]]], 
+["THJ4", [[2588.0, 0.0], [2275.0, 22.5], [1982.0, 45.0], [1741.0, 67.5]]], 
+["THJ5", [[658.0, -60.0], [840.0, -45.0], [1080.0, -30.0], [1309.0, -15.0], [1699.0, 0.0], [2154.0, 15.0], [2586.0, 30.0], [2915.0, 45.0], [3135.0, 60.0]]], 
 ["WRJ1", [[2434.0, -45.0], [2356.0, -22.5], [2240.0, 0.0], [2148.0, 15.0], [2058.0, 30.0]]], 
 ["WRJ2", [[3151.0, -30.0], [1286.76, 0.0], [450.0, 10.0]]], 
 ]
 
 sr_calibrations_coupled: [
-[["THJ1", "THJ2"], [[[2674.0, 2383.0], 0.0, 40.0], 
-                    [[2671.0, 2219.0], 0.0, 20.0], 
-                    [[2642.0, 2019.0], 0.0, 0.0], 
-                    [[2638.0, 1843.0], 0.0, -20.0], 
-                    [[2629.0, 1699.0], 0.0, -40.0], 
-                    [[2285.0, 2362.0], 22.5, 40.0], 
-                    [[2306.0, 2188.0], 22.5, 20.0], 
-                    [[2281.0, 2007.0], 22.5, 0.0], 
-                    [[2255.0, 1811.0], 22.5, -20.0], 
-                    [[2248.0, 1665.0], 22.5, -40.0], 
-                    [[1889.0, 2333.0], 45.0, 40.0], 
-                    [[1908.0, 2169.0], 45.0, 20.0], 
-                    [[1892.0, 1981.0], 45.0, 0.0], 
-                    [[1872.0, 1800.0], 45.0, -20.0], 
-                    [[1852.0, 1637.0], 45.0, -40.0], 
-                    [[1492.0, 2305.0], 67.5, 40.0], 
-                    [[1508.0, 2134.0], 67.5, 20.0], 
-                    [[1493.0, 1951.0], 67.5, 0.0], 
-                    [[1471.0, 1767.0], 67.5, -20.0], 
-                    [[1451.0, 1612.0], 67.5, -40.0], 
-                    [[1188.0, 2285.0], 90.0, 40.0], 
-                    [[1176.0, 2114.0], 90.0, 20.0], 
-                    [[1159.0, 1926.0], 90.0, 0.0], 
-                    [[1140.0, 1744.0], 90.0, -20.0], 
-                    [[1125.0, 1591.0], 90.0, -40.0]]]
+[["THJ1", "THJ2"], [[[3394.0, 2414.0], -15.0, 40.0], 
+                    [[3386.0, 2211.0], -15.0, 20.0], 
+                    [[3366.0, 1997.0], -15.0, 0.0], 
+                    [[3337.0, 1800.0], -15.0, -20.0], 
+                    [[3313.0, 1629.0], -15.0, -40.0],
+                    [[3122.0, 2394.0], 0.0, 40.0], 
+                    [[3119.0, 2201.0], 0.0, 20.0], 
+                    [[3097.0, 1983.0], 0.0, 0.0], 
+                    [[3052.0, 1779.0], 0.0, -20.0], 
+                    [[3021.0, 1614.0], 0.0, -40.0], 
+                    [[2604.0, 2368.0], 22.5, 40.0], 
+                    [[2562.0, 2165.0], 22.5, 20.0], 
+                    [[2558.0, 1947.0], 22.5, 0.0], 
+                    [[2523.0, 1737.0], 22.5, -20.0], 
+                    [[2500.0, 1583.0], 22.5, -40.0], 
+                    [[2033.0, 2335.0], 45.0, 40.0], 
+                    [[2016.0, 2143.0], 45.0, 20.0], 
+                    [[1994.0, 1920.0], 45.0, 0.0], 
+                    [[1991.0, 1708.0], 45.0, -20.0], 
+                    [[1973.0, 1545.0], 45.0, -40.0], 
+                    [[1587.0, 2299.0], 67.5, 40.0], 
+                    [[1567.0, 2111.0], 67.5, 20.0], 
+                    [[1551.0, 1888.0], 67.5, 0.0], 
+                    [[1501.0, 1686.0], 67.5, -20.0], 
+                    [[1461.0, 1512.0], 67.5, -40.0], 
+                    [[1094.0, 2285.0], 90.0, 40.0], 
+                    [[1046.0, 2081.0], 90.0, 20.0], 
+                    [[1025.0, 1862.0], 90.0, 0.0], 
+                    [[996.0, 1652.0], 90.0, -20.0], 
+                    [[956.0, 1478.0], 90.0, -40.0]]]
 ]
