--- a/sr_hand_config/6506/calibrations/calibration.yaml
+++ b/sr_hand_config/6506/calibrations/calibration.yaml
@@ -17,28 +17,28 @@
 # sr_triple_pedal.py. I'll leave this here in case it might be useful later.
 
 sr_calibrations: [
-["FFJ1", [[3028.0, 0.0], [2468.0, 22.5], [1880.0, 45.0], [1302.0, 67.5], [781.0, 90.0]]], 
-["FFJ2", [[2838.0, 0.0], [2513.0, 22.5], [2070.0, 45.0], [1738.0, 67.5], [1395.0, 90.0]]], 
-["FFJ3", [[3215.0, -15.0], [3023.0, 0.0], [2654.0, 22.5], [2123.0, 45.0], [1630.0, 67.5], [1149.0, 90.0]]], 
+["FFJ1", [[3050.0, 0.0], [2565.0, 22.5], [1894.0, 45.0], [1316.0, 67.5], [772.0, 90.0]]], 
+["FFJ2", [[2842.0, 0.0], [2484.0, 22.5], [2121.0, 45.0], [1745.0, 67.5], [1393.0, 90.0]]], 
+["FFJ3", [[3215.0, -15.0], [3015.0, 0.0], [2655.0, 22.5], [2171.0, 45.0], [1618.0, 67.5], [1135.0, 90.0]]], 
 ["FFJ4", [[1320.0, -20.0], [1584.0, -10.0], [1857.0, 0.0], [2131.0, 10.0], [2385.0, 20.0]]], 
-["MFJ1", [[3120.0, 0.0], [2574.0, 22.5], [1894.0, 45.0], [1335.0, 67.5], [821.0, 90.0]]], 
-["MFJ2", [[2819.0, 0.0], [2515.0, 22.5], [2170.0, 45.0], [1780.0, 67.5], [1415.0, 90.0]]], 
-["MFJ3", [[3453.0, -15.0], [3300.75, 0.0], [2918.0, 22.5], [2406.0, 45.0], [1842.0, 67.5], [1330.0, 90.0]]], 
+["MFJ1", [[3135.0, 0.0], [2542.0, 22.5], [1861.0, 45.0], [1263.0, 67.5], [719.0, 90.0]]], 
+["MFJ2", [[2820.0, 0.0], [2528.0, 22.5], [2150.0, 45.0], [1760.0, 67.5], [1401.0, 90.0]]], 
+["MFJ3", [[3448.0, -15.0], [3307.0, 0.0], [2955.0, 22.5], [2470.0, 45.0], [1838.0, 67.5], [1286.0, 90.0]]], 
 ["MFJ4", [[1141.0, -20.0], [1428.0, -10.0], [1737.0, 0.0], [2035.0, 10.0], [2327.0, 20.0]]], 
-["RFJ1", [[2756.0, 0.0], [2145.0, 22.5], [1523.0, 45.0], [1022.0, 67.5], [598.0, 90.0]]], 
-["RFJ2", [[2684.0, 0.0], [2394.0, 22.5], [2061.0, 45.0], [1718.0, 67.5], [1411.0, 90.0]]], 
-["RFJ3", [[3164.0, -15.0], [2852.51, 0.0], [2537.0, 22.5], [2179.0, 45.0], [1734.0, 67.5], [1364.0, 90.0]]], 
-["RFJ4", [[1841.0, -20.0], [1591.0, -10.0], [1337.0, 0.0], [1124.0, 10.0], [978.0, 20.0]]], 
-["LFJ1", [[2842.0, 0.0], [2187.0, 22.5], [1528.0, 45.0], [928.0, 67.5], [525.0, 90.0]]], 
-["LFJ2", [[2925.0, 0.0], [2682.0, 22.5], [2314.0, 45.0], [1920.0, 67.5], [1551.0, 90.0]]], 
-["LFJ3", [[2780.0, -15.0], [2366.0, 0.0], [1854.0, 22.5], [1334.0, 45.0], [935.0, 67.5], [700.0, 90.0]]], 
-["LFJ4", [[1998.0, -20.0], [1723.0, -10.0], [1439.0, 0.0], [1177.0, 10.0], [982.0, 20.0]]], 
-["LFJ5", [[1037.0, 0.0], [1587.0, 22.5], [2046.0, 45.0], [2505.0, 67.5]]], 
+["RFJ1", [[2765.0, 0.0], [2185.0, 22.5], [1549.0, 45.0], [995.0, 67.5], [548.0, 90.0]]], 
+["RFJ2", [[2689.0, 0.0], [2399.0, 22.5], [2067.0, 45.0], [1724.0, 67.5], [1404.0, 90.0]]], 
+["RFJ3", [[3162.0, -15.0], [2855.0, 0.0], [2557.0, 22.5], [2192.0, 45.0], [1729.0, 67.5], [1370.0, 90.0]]], 
+["RFJ4", [[1841.0, -20.0], [1591.0, -10.0], [1322.0, 0.0], [1124.0, 10.0], [978.0, 20.0]]], 
+["LFJ1", [[2821.0, 0.0], [2153.0, 22.5], [1468.0, 45.0], [860.0, 67.5], [463.0, 90.0]]], 
+["LFJ2", [[3000.0, 0.0], [2700.0, 22.5], [2326.0, 45.0], [1905.0, 67.5], [1502.0, 90.0]]], 
+["LFJ3", [[2788.0, -15.0], [2350.0, 0.0], [1870.0, 22.5], [1348.0, 45.0], [936.0, 67.5], [688.0, 90.0]]], 
+["LFJ4", [[1998.0, -20.0], [1723.0, -10.0], [1424.0, 0.0], [1177.0, 10.0], [982.0, 20.0]]], 
+["LFJ5", [[1005.0, 0.0], [1587.0, 22.5], [2046.0, 45.0]]], 
 ["THJ3", [[2550.0, -12.0], [1636.0, 0.0], [1145.0, 12.0]]], 
 ["THJ4", [[2653.0, 0.0], [2385.0, 22.5], [2065.0, 45.0], [1757.0, 67.5]]], 
 ["THJ5", [[997.0, -60.0], [1225.0, -45.0], [1508.0, -30.0], [1916.0, -15.0], [2313.0, 0.0], [2693.0, 15.0], [2933.0, 30.0], [3131.0, 45.0], [3329.0, 60.0]]], 
-["WRJ1", [[2456.0, -45.0], [2298.0, -22.5], [2103.0, 0.0], [1958.0, 15.0], [1827.0, 30.0]]], 
-["WRJ2", [[2569.0, -30.0], [1047.0, 0.0], [433.0, 10.0]]], 
+["WRJ1", [[2468.0, -45.0], [2318.0, -22.5], [2130.0, 0.0], [1998.0, 15.0], [1876.0, 30.0]]], 
+["WRJ2", [[2642.0, -30.0], [1071.0, 0.0], [503.0, 10.0]]], 
 ]
 
 sr_calibrations_coupled: [
