--- a/sr_hand_config/5018/calibrations/calibration.yaml
+++ b/sr_hand_config/5018/calibrations/calibration.yaml
@@ -17,21 +17,21 @@
 # sr_triple_pedal.py. I'll leave this here in case it might be useful later.
 
 sr_calibrations: [
-["FFJ1", [[2987.0, 0.0], [2252.0, 22.5], [1457.0, 45.0], [805.0, 67.5], [305.0, 90.0]]], 
-["FFJ2", [[2996.0, 0.0], [2709.0, 22.5], [2318.0, 45.0], [1946.0, 67.5], [1557.0, 90.0]]], 
-["FFJ3", [[2345.0, 0.0], [1878.0, 22.5], [1491.0, 45.0], [1146.0, 67.5], [907.0, 90.0]]], 
+["FFJ1", [[2980.0, 0.0], [2222.0, 22.5], [1410.0, 45.0], [771.0, 67.5], [254.0, 90.0]]], 
+["FFJ2", [[2988.0, 0.0], [2705.0, 22.5], [2345.0, 45.0], [1908.0, 67.5], [1510.0, 90.0]]], 
+["FFJ3", [[2767.0, -15.0], [2393.0, 0.0], [1911.0, 22.5], [1462.0, 45.0], [1114.0, 67.5], [858.0, 90.0]]], 
 ["FFJ4", [[2119.0, -20.0], [1780.0, -10.0], [1399.0, 0.0], [1125.0, 10.0], [878.0, 20.0]]], 
-["MFJ1", [[2959.0, 0.0], [2323.0, 22.5], [1647.0, 45.0], [1080.0, 67.5], [601.0, 90.0]]], 
-["MFJ2", [[2936.0, 0.0], [2594.0, 22.5], [2191.0, 45.0], [1773.0, 67.5], [1410.0, 90.0]]], 
-["MFJ3", [[2545.0, 0.0], [1991.0, 22.5], [1475.0, 45.0], [1079.0, 67.5], [793.0, 90.0]]], 
+["MFJ1", [[2964.0, 0.0], [2255.0, 22.5], [1612.0, 45.0], [960.0, 67.5], [552.0, 90.0]]], 
+["MFJ2", [[2930.0, 0.0], [2571.0, 22.5], [2180.0, 45.0], [1756.0, 67.5], [1360.0, 90.0]]], 
+["MFJ3", [[3095.0, -15.0], [2587.0, 0.0], [1966.0, 22.5], [1348.0, 45.0], [902.0, 67.5], [627.0, 90.0]]], 
 ["MFJ4", [[2281.0, -20.0], [1991.0, -10.0], [1729.0, 0.0], [1406.0, 10.0], [1132.0, 20.0]]], 
-["RFJ1", [[3156.94, 0.0], [2470.0, 22.5], [1844.0, 45.0], [1193.0, 67.5], [647.0, 90.0]]], 
-["RFJ2", [[2857.36, 0.0], [2551.0, 22.5], [2173.0, 45.0], [1711.0, 67.5], [1311.0, 90.0]]], 
-["RFJ3", [[2379.0, 0.0], [1892.0, 22.5], [1384.0, 45.0], [1012.0, 67.5], [712.0, 90.0]]], 
+["RFJ1", [[3150.94, 0.0], [2516.0, 22.5], [1749.0, 45.0], [1163.0, 67.5], [605.0, 90.0]]], 
+["RFJ2", [[2851.36, 0.0], [2524.0, 22.5], [2134.0, 45.0], [1665.0, 67.5], [1250.0, 90.0]]], 
+["RFJ3", [[2783.0, -15.0], [2364.0, 0.0], [1842.0, 22.5], [1377.0, 45.0], [1016.0, 67.5], [740.0, 90.0]]], 
 ["RFJ4", [[991.0, -20.0], [1298.0, -10.0], [1622.0, 0.0], [1965.0, 10.0], [2289.0, 20.0]]], 
-["LFJ1", [[3398.0, 0.0], [2765.0, 22.5], [2042.0, 45.0], [1467.0, 67.5], [739.0, 90.0]]], 
-["LFJ2", [[2878.0, 0.0], [2550.0, 22.5], [2167.0, 45.0], [1763.0, 67.5], [1448.0, 90.0]]], 
-["LFJ3", [[2598.0, 0.0], [2078.0, 22.5], [1583.0, 45.0], [1194.0, 67.5], [929.0, 90.0]]], 
+["LFJ1", [[3336.0, 0.0], [2789.0, 22.5], [2082.0, 45.0], [1478.0, 67.5], [796.0, 90.0]]], 
+["LFJ2", [[2886.0, 0.0], [2552.0, 22.5], [2161.0, 45.0], [1827.0, 67.5], [1413.0, 90.0]]], 
+["LFJ3", [[2868.0, -15.0], [2589.0, 0.0], [2140.0, 22.5], [1709.0, 45.0], [1344.0, 67.5], [1007.0, 90.0]]], 
 ["LFJ4", [[959.0, -20.0], [1241.0, -10.0], [1533.0, 0.0], [1871.0, 10.0], [2198.0, 20.0]]], 
 ["LFJ5", [[1484.0, 0.0], [2044.0, 22.5], [2522.0, 45.0], [3206.0, 67.5]]], 
 ["THJ3", [[2497.0, -12.0], [1672.0, 0.0], [1120.0, 12.0]]], 
